--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,9 +9,11 @@ set -g display-panes-time 5000
 set mouse-resize-pane on
 set mouse-select-pane on
 set mouse-select-window on
+set default-terminal xterm
 
 setw -g utf8 on
 setw -g mode-keys vi
+setw -g mode-mouse on
 
 bind Space command-prompt 
 
