vpn add .zshrc & bash/back/oh-my-zsh.tar.gz

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,34 +1,33 @@
+set default-terminal xterm
+set default-shell /usr/bin/zsh
+#setw -g default-command /usr/bin/zsh
+
 set -g prefix C-s
 
-set -g base-index 1
+set -g base-index 1 #/*{{{*/
 set -g pane-base-index 1
-set -g display-time 3000
+set -g display-time 5000
 set -g display-panes-time 5000
-
-#set -g mouse on
+#/*}}}*/
+#set -g mouse on #/*{{{*/
 set mouse-resize-pane on
 set mouse-select-pane on
 set mouse-select-window on
-set default-terminal xterm
-
-setw -g utf8 on
+#/*}}}*/
+setw -g utf8 on #/*{{{*/
 setw -g mode-keys vi
 setw -g mode-mouse on
-
+#/*}}}*/
 bind Space command-prompt 
-
-
-
-#buffers
+bind r source ~/.tmux.conf \; refresh-client
+#buffers/*{{{*/
 bind a copy-mode
 bind z paste-buffer
 bind -t vi-copy v begin-selection
-bind -t vi-copy c copy-selection
+bind -t vi-copy y copy-selection
 #bind -t vi-copy a append-selection
-
-
-
-#pane
+#/*}}}*/
+#pane/*{{{*/
 bind u split-window
 bind v split-window -h
 
@@ -42,24 +41,26 @@ bind L command-prompt -p "size:" "resize-pane -R %%"
 bind J command-prompt -p "size:" "resize-pane -D %%"
 bind K command-prompt -p "size:" "resize-pane -U %%"
 
-bind y select-layout main-vertical
 bind g select-layout main-horizontal
+bind y select-layout main-vertical
 
-bind S command-prompt -p "from:,to:" "swap-pane -s %% -t %%"
-bind D display-panes
-
-
-
-#window
-bind q confirm-before kill-window
-bind m command-prompt -p "index:" "move-window -t :%%"
-bind e command-prompt -p "name:" "rename-window %%"
+bind M command-prompt -p "from:,to:" "swap-pane -s %% -t %%"
+bind i display-panes
+bind 1 select-pane -t .1
+bind 2 select-pane -t .2
+bind 3 select-pane -t .3
+bind 4 select-pane -t .4
+bind 5 select-pane -t .5
+bind 6 select-pane -t .6
+#/*}}}*/
+#window #/*{{{*/
 bind b break-pane
-
-
-
-#status
-#set -g status off
+bind e command-prompt -p "name:" "rename-window %%"
+bind m command-prompt -p "index:" "move-window -t :%%"
+bind q confirm-before kill-window
+#/*}}}*/
+#status/*{{{*/
+set -g status off
 #set -g status-position top
 set -g status-justify centre
 #set -g status-style bg=green
@@ -75,4 +76,5 @@ set -g status-right '#[bg=cyan] #(basename `pwd`) #[bg=blue] [#{pane_height}x#{p
 setw -g window-status-format '#[fg=blue] #I:#W#F '
 setw -g window-status-current-format '#[bg=yellow,fg=red] #I:#W#F '
 #setw -g window-status-current-style bg=yellow
-setw -g window-status-separator " "
+#setw -g window-status-separator " "
+#/*}}}*/
