--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,6 +10,7 @@ set -g display-time 5000
 set -g display-panes-time 5000
 #/*}}}*/
 #set -g mouse on #/*{{{*/
+set -g mouse on
 set mouse-resize-pane on
 set mouse-select-pane on
 set mouse-select-window on
@@ -21,7 +22,7 @@ setw -g mode-mouse on
 bind Space command-prompt 
 bind r source ~/.tmux.conf \; refresh-client
 #buffers/*{{{*/
-bind a copy-mode
+bind C-s copy-mode
 bind z paste-buffer
 bind -t vi-copy v begin-selection
 bind -t vi-copy y copy-selection
