vpn add tmux history-limimt

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -78,3 +78,5 @@ setw -g window-status-current-format '#[bg=yellow,fg=red] #I:#W#F '
 #setw -g window-status-current-style bg=yellow
 #setw -g window-status-separator " "
 #/*}}}*/
+#
+set-option -g history-limit 50000
