--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,7 +21,7 @@ setw -g mode-mouse on
 bind Space command-prompt 
 bind r source ~/.tmux.conf \; refresh-client
 #buffers/*{{{*/
-bind a copy-mode
+bind C-s copy-mode
 bind z paste-buffer
 bind -t vi-copy v begin-selection
 bind -t vi-copy y copy-selection
