--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,10 +9,11 @@ set -g pane-base-index 1
 set -g display-time 5000
 set -g display-panes-time 5000
 #/*}}}*/
-set -g mouse on #/*{{{*/
+set mouse on #/*{{{*/
 set mouse-resize-pane on
 set mouse-select-pane on
 set mouse-select-window on
+set mode-mouse on
 #/*}}}*/
 setw -g utf8 on #/*{{{*/
 setw -g mode-keys vi
