--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,7 +9,7 @@ set -g pane-base-index 1
 set -g display-time 5000
 set -g display-panes-time 5000
 #/*}}}*/
-set mouse -g on #/*{{{*/
+set mouse on #/*{{{*/
 set mouse-resize-pane on
 set mouse-select-pane on
 set mouse-select-window on
