vpm mod .tmux.conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,34 +1,74 @@
+set -g prefix C-s #{{{
+
 set default-terminal xterm
 set default-shell /usr/bin/zsh
-#setw -g default-command /usr/bin/zsh
 
-set -g prefix C-s
+set -g mode-keys vi
+set -g history-limit 500000
 
-set -g base-index 1 #/*{{{*/
-set -g pane-base-index 1
-set -g display-time 5000
+set -g base-index 1
+set -g renumber-windows on
 set -g display-panes-time 5000
-#/*}}}*/
-set mouse on #/*{{{*/
-set mouse-resize-pane on
-set mouse-select-pane on
-set mouse-select-window on
-set mode-mouse on
-#/*}}}*/
-setw -g utf8 on #/*{{{*/
-setw -g mode-keys vi
-setw -g mode-mouse on
-#/*}}}*/
-bind Space command-prompt 
+set -g display-time 5000
+
+set -g mouse on
+
+setw -g pane-base-index 1
+setw -g utf8 on
+#}}}
+set -g status on #{{{
+set -g status-utf8 on
+set -g status-keys emacs
+set -g status-interval 1
+set -g status-position bottom
+
+set -g status-justify centre
+set -g status-style bg=green
+
+set -g status-left-length 40
+set -g status-left-style bg=red
+set -g status-left ' [%m-%d %H:%M] #[bg=magenta] #S #[bg=green][#h.local]'
+
+set -g status-right-length 40
+set -g status-right-style bg=green
+set -g status-right '[#(basename `pwd`)/]#[bg=cyan] #P #[bg=blue][#{cursor_x},#{cursor_y} #{pane_height}x#{pane_width}] '
+
+setw -g window-status-format ' #I:#W#F '
+setw -g window-status-separator " "
+setw -g window-status-style bg=green
+setw -g window-status-bell-style bg=red
+setw -g window-status-last-style bg=green
+setw -g window-status-current-style bg=red
+#setw -g window-status-current-format ' #I:#W#F '
+
+#}}}
+
+bind Space command-prompt
+# session # {{{
+bind s choose-tree
+bind d detach-client
 bind r source ~/.tmux.conf \; refresh-client
-#buffers/*{{{*/
-bind C-s copy-mode
-bind z paste-buffer
-bind -t vi-copy v begin-selection
-bind -t vi-copy y copy-selection
-#bind -t vi-copy a append-selection
-#/*}}}*/
-#pane/*{{{*/
+bind t clock-mode
+# }}}
+#window #{{{
+bind w choose-window
+bind q confirm-before kill-window
+
+bind b break-pane
+bind c new-window
+
+bind n next-window
+bind p previous-window
+
+bind f command-prompt -p "find: " "find-window '%%'"
+bind e command-prompt -p "name: " "rename-window '%%'"
+bind m command-prompt -p "index: " "move-window -t :'%%'"
+bind S command-prompt -p "from:,to:" "swap-window -s %% -t %%"
+#}}}
+#pane #{{{
+bind o select-pane -t :.+
+bind x confirm-before -p "kill-pane #P? (y/n)" kill-pane
+bind i display-panes
 bind u split-window
 bind v split-window -h
 
@@ -41,43 +81,27 @@ bind H command-prompt -p "size:" "resize-pane -L %%"
 bind L command-prompt -p "size:" "resize-pane -R %%"
 bind J command-prompt -p "size:" "resize-pane -D %%"
 bind K command-prompt -p "size:" "resize-pane -U %%"
+bind M command-prompt -p "from:,to:" "swap-pane -s %% -t %%"
 
 bind g select-layout main-horizontal
 bind y select-layout main-vertical
 
-bind M command-prompt -p "from:,to:" "swap-pane -s %% -t %%"
-bind i display-panes
 bind 1 select-pane -t .1
 bind 2 select-pane -t .2
 bind 3 select-pane -t .3
 bind 4 select-pane -t .4
 bind 5 select-pane -t .5
 bind 6 select-pane -t .6
-#/*}}}*/
-#window #/*{{{*/
-bind b break-pane
-bind e command-prompt -p "name:" "rename-window %%"
-bind m command-prompt -p "index:" "move-window -t :%%"
-bind q confirm-before kill-window
-#/*}}}*/
-#status/*{{{*/
-set -g status off
-#set -g status-position top
-set -g status-justify centre
-#set -g status-style bg=green
+#}}}
+#buffers #{{{
+bind C-s copy-mode
+bind C-c clear-history
 
-set -g status-left '#[bg=red]  [%m-%d %H:%M] #[bg=magenta] #S '
-#set -g status-left '  [%m-%d %H:%M]#[bg=magenta] [#S]'
-set -g status-left-length 40
-#set -g status-left-style bg=red
+bind a choose-buffer
+bind z paste-buffer
 
-set -g status-right '#[bg=cyan] #(basename `pwd`) #[bg=blue] [#{pane_height}x#{pane_width}-#P]  '
-#set -g status-right-style bg=blue
+bind -t vi-copy v begin-selection
+bind -t vi-copy y copy-selection
+bind -t vi-copy a append-selection
+#}}}
 
-setw -g window-status-format '#[fg=blue] #I:#W#F '
-setw -g window-status-current-format '#[bg=yellow,fg=red] #I:#W#F '
-#setw -g window-status-current-style bg=yellow
-#setw -g window-status-separator " "
-#/*}}}*/
-#
-set-option -g history-limit 50000
