mac fix .tmux.conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,7 @@
 set -g prefix C-s #{{{
 
 set default-terminal xterm
-set default-shell /usr/bin/zsh
+#set default-shell /usr/bin/zsh
 
 set -g mode-keys vi
 set -g history-limit 500000
@@ -14,10 +14,10 @@ set -g display-time 5000
 set -g mouse on
 
 setw -g pane-base-index 1
-setw -g utf8 on
+setw -g -q utf8 on
 #}}}
 set -g status on #{{{
-set -g status-utf8 on
+set -g -q status-utf8 on
 set -g status-keys emacs
 set -g status-interval 1
 set -g status-position bottom
@@ -27,7 +27,7 @@ set -g status-style bg=green
 
 set -g status-left-length 40
 set -g status-left-style bg=red
-set -g status-left ' [%m-%d %H:%M] #[bg=magenta] #S #[bg=green][#h.local]'
+set -g status-left ' [%m-%d %H:%M] #[bg=magenta] #S #[bg=green][#h.local] '
 
 set -g status-right-length 40
 set -g status-right-style bg=green
