mac add source power.sh

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,6 @@
 set -g prefix C-s #{{{
 
-set default-terminal xterm
+set default-terminal screen
 #set default-shell /usr/bin/zsh
 
 set -g mode-keys vi
