mac mod bindkey

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -101,7 +101,14 @@ bind a choose-buffer
 bind z paste-buffer
 
 bind -t vi-copy v begin-selection
-bind -t vi-copy y copy-selection
+bind -t vi-copy c copy-selection
 bind -t vi-copy a append-selection
+
+bind -t vi-copy f page-down
+bind -t vi-copy b page-up
+bind -t vi-copy d halfpage-down
+bind -t vi-copy u halfpage-up
+bind -t vi-copy e scroll-down
+bind -t vi-copy y scroll-up
 #}}}
 
