--- a/.tmux.conf
+++ b/.tmux.conf
@@ -16,7 +16,7 @@ set -g mouse on
 setw -g pane-base-index 1
 setw -g -q utf8 on
 #}}}
-set -g status on #{{{
+set -g status off #{{{
 set -g -q status-utf8 on
 set -g status-keys emacs
 set -g status-interval 1
