--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,45 +7,40 @@ set -g mode-keys vi
 set -g history-limit 500000
 
 set -g base-index 1
-set -g renumber-windows on
 set -g display-panes-time 5000
 set -g display-time 5000
 
-set -g mouse on
 
 setw -g pane-base-index 1
-setw -g -q utf8 on
 #}}}
 set -g status off #{{{
-set -g -q status-utf8 on
-set -g status-keys emacs
-set -g status-interval 1
-set -g status-position bottom
-
-set -g status-justify centre
-set -g status-style bg=green
-
-set -g status-left-length 40
-set -g status-left-style bg=red
-set -g status-left ' [%m-%d %H:%M] #[bg=magenta] #S #[bg=green][#h.local] '
-
-set -g status-right-length 40
-set -g status-right-style bg=green
-set -g status-right '[#(basename `pwd`)/]#[bg=cyan] #P #[bg=blue][#{cursor_x},#{cursor_y} #{pane_height}x#{pane_width}] '
-
-setw -g window-status-format ' #I:#W#F '
-setw -g window-status-separator " "
-setw -g window-status-style bg=green
-setw -g window-status-bell-style bg=red
-setw -g window-status-last-style bg=green
-setw -g window-status-current-style bg=red
+#set -g status-keys emacs
+#set -g status-interval 1
+#
+#set -g status-justify centre
+#set -g status-style bg=green
+#
+#set -g status-left-length 40
+#set -g status-left-style bg=red
+#set -g status-left ' [%m-%d %H:%M] #[bg=magenta] #S #[bg=green][#h.local] '
+#
+#set -g status-right-length 40
+#set -g status-right-style bg=green
+#set -g status-right '[#(basename `pwd`)/]#[bg=cyan] #P #[bg=blue][#{cursor_x},#{cursor_y} #{pane_height}x#{pane_width}] '
+#
+#setw -g window-status-format ' #I:#W#F '
+#setw -g window-status-separator " "
+#setw -g window-status-style bg=green
+#setw -g window-status-bell-style bg=red
+#setw -g window-status-last-style bg=green
+#setw -g window-status-current-style bg=red
 #setw -g window-status-current-format ' #I:#W#F '
 
 #}}}
 
 bind Space command-prompt
 # session # {{{
-bind s choose-tree
+#bind s choose-tree
 bind d detach-client
 bind r source ~/.tmux.conf \; refresh-client
 bind t clock-mode
@@ -102,13 +97,22 @@ bind z paste-buffer
 
 bind -t vi-copy v begin-selection
 bind -t vi-copy c copy-selection
-bind -t vi-copy a append-selection
 
 bind -t vi-copy f page-down
 bind -t vi-copy b page-up
-bind -t vi-copy d halfpage-down
-bind -t vi-copy u halfpage-up
 bind -t vi-copy e scroll-down
 bind -t vi-copy y scroll-up
 #}}}
+
+if-shell "[ `tmux -V |cut -d' ' -f2|cut -d'.' -f1` -gt '1' ]" "set -g mouse on"
+if-shell "[ `tmux -V |cut -d' ' -f2|cut -d'.' -f1` -gt '1' ]" "set -g renumber-windows on"
+if-shell "[ `tmux -V |cut -d' ' -f2|cut -d'.' -f1` -gt '1' ]" "setw -g -q utf8 on"
+if-shell "[ `tmux -V |cut -d' ' -f2|cut -d'.' -f1` -gt '1' ]" "set -g -q status-utf8 on"
+if-shell "[ `tmux -V |cut -d' ' -f2|cut -d'.' -f1` -gt '1' ]" "bind -t vi-copy d halfpage-down"
+if-shell "[ `tmux -V |cut -d' ' -f2|cut -d'.' -f1` -gt '1' ]" "bind -t vi-copy u halfpage-up"
+if-shell "[ `tmux -V |cut -d' ' -f2|cut -d'.' -f1` -gt '1' ]" "bind -t vi-copy a append-selection"
+
+if-shell "[ `tmux -V |cut -d' ' -f2|cut -d'.' -f1` -lt '2' ]" "set -g mouse-resize-pane on"
+if-shell "[ `tmux -V |cut -d' ' -f2|cut -d'.' -f1` -lt '2' ]" "set -g mouse-select-pane on"
+if-shell "[ `tmux -V |cut -d' ' -f2|cut -d'.' -f1` -lt '2' ]" "set -g mouse-select-window on"
 
