vpn pro .tmux.conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -98,6 +98,7 @@ bind z paste-buffer
 bind -t vi-copy v begin-selection
 bind -t vi-copy c copy-selection
 
+bind -t vi-copy Space page-down
 bind -t vi-copy f page-down
 bind -t vi-copy b page-up
 bind -t vi-copy e scroll-down
