--- a/.tmux.conf
+++ b/.tmux.conf
@@ -40,8 +40,8 @@ set -g status off #{{{
 
 bind Space command-prompt
 # session # {{{
-#bind s choose-tree
 bind d detach-client
+bind g rename-session
 bind r source ~/.tmux.conf \; refresh-client
 bind t clock-mode
 # }}}
@@ -52,34 +52,36 @@ bind q confirm-before kill-window
 bind b break-pane
 bind c new-window
 
+bind o last-window
 bind n next-window
 bind p previous-window
 
 bind f command-prompt -p "find: " "find-window '%%'"
 bind e command-prompt -p "name: " "rename-window '%%'"
-bind m command-prompt -p "index: " "move-window -t :'%%'"
-bind S command-prompt -p "from:,to:" "swap-window -s %% -t %%"
+bind m command-prompt -p "from:,to:" "swap-window -s %% -t %%"
+
 #}}}
 #pane #{{{
-bind o select-pane -t :.+
-bind x confirm-before -p "kill-pane #P? (y/n)" kill-pane
 bind i display-panes
+bind x confirm-before -p "kill-pane #P? (y/n)" kill-pane
+
 bind u split-window
 bind v split-window -h
 
+bind C-o last-pane
 bind h select-pane -L
 bind l select-pane -R
 bind j select-pane -D
 bind k select-pane -U
 
-bind H command-prompt -p "size:" "resize-pane -L %%"
-bind L command-prompt -p "size:" "resize-pane -R %%"
-bind J command-prompt -p "size:" "resize-pane -D %%"
-bind K command-prompt -p "size:" "resize-pane -U %%"
-bind M command-prompt -p "from:,to:" "swap-pane -s %% -t %%"
+bind C-h command-prompt -p "size:" "resize-pane -L %%"
+bind C-l command-prompt -p "size:" "resize-pane -R %%"
+bind C-j command-prompt -p "size:" "resize-pane -D %%"
+bind C-k command-prompt -p "size:" "resize-pane -U %%"
+bind C-m command-prompt -p "from:,to:" "swap-pane -s %% -t %%"
 
-bind g select-layout main-horizontal
-bind y select-layout main-vertical
+bind C-u select-layout main-horizontal
+bind C-v select-layout main-vertical
 
 bind 1 select-pane -t .1
 bind 2 select-pane -t .2
@@ -89,8 +91,9 @@ bind 5 select-pane -t .5
 bind 6 select-pane -t .6
 #}}}
 #buffers #{{{
+bind y capture-pane
 bind C-s copy-mode
-bind C-c clear-history
+bind C-d clear-history
 
 bind a choose-buffer
 bind z paste-buffer
