--- a/.tmux.conf
+++ b/.tmux.conf
@@ -41,7 +41,7 @@ set -g status off #{{{
 bind Space command-prompt
 # session # {{{
 bind d detach-client
-bind g rename-session
+bind g command-prompt -p "rename session:" "rename-session %%"
 bind r source ~/.tmux.conf \; refresh-client
 bind t clock-mode
 # }}}
