--- a/.tmux.conf
+++ b/.tmux.conf
@@ -82,6 +82,7 @@ bind C-m command-prompt -p "from:,to:" "swap-pane -s %% -t %%"
 
 bind C-u select-layout main-horizontal
 bind C-v select-layout main-vertical
+bind C-t select-layout tiled
 
 bind 1 select-pane -t .1
 bind 2 select-pane -t .2
