vpn mod power.sh

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -60,6 +60,12 @@ bind f command-prompt -p "find: " "find-window '%%'"
 bind e command-prompt -p "name: " "rename-window '%%'"
 bind m command-prompt -p "from:,to:" "swap-window -s %% -t %%"
 
+bind ! select-window -t :1
+bind @ select-window -t :2
+bind '#' select-window -t :3
+bind '$' select-window -t :4
+bind '%' select-window -t :5
+
 #}}}
 #pane #{{{
 bind i display-panes
