vpn pro power.sh

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -49,7 +49,8 @@ bind t clock-mode
 bind w choose-window
 bind q confirm-before kill-window
 
-bind b break-pane
+# bind b break-pane
+bind b display-panes
 bind c new-window
 
 bind o last-window
@@ -86,8 +87,8 @@ bind C-j command-prompt -p "size:" "resize-pane -D %%"
 bind C-k command-prompt -p "size:" "resize-pane -U %%"
 bind C-m command-prompt -p "from:,to:" "swap-pane -s %% -t %%"
 
-bind C-u select-layout main-horizontal
-bind C-v select-layout main-vertical
+# bind C-u select-layout main-horizontal
+# bind C-v select-layout main-vertical
 bind C-t select-layout tiled
 
 bind 1 select-pane -t .1
