--- a/.gitconfig
+++ b/.gitconfig
@@ -5,7 +5,7 @@
 	ui = always
 [alias]
 	s = status
-	l = log --pretty=format:\"%C(4)%h %C(6)%an %C(2)%ar %C(3)%d %C(7)%s\" --graph
+	l = log --pretty=format:\"%C(4)%h %C(6)%ad %C(4)%an %C(6)%ar %C(4)%d %n%C(7)%s\" --date=\"format:%m/%d %R\" --shortstat --graph
 	b = branch
 	r = remote
 	m = merge
