vpn add note nginx

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -61,11 +61,12 @@ bind f command-prompt -p "find: " "find-window '%%'"
 bind e command-prompt -p "name: " "rename-window '%%'"
 bind m command-prompt -p "from:,to:" "swap-window -s %% -t %%"
 
-bind ! select-window -t :1
-bind @ select-window -t :2
-bind '#' select-window -t :3
-bind '$' select-window -t :4
-bind '%' select-window -t :5
+bind 1 select-window -t :1
+bind 2 select-window -t :2
+bind 3 select-window -t :3
+bind 4 select-window -t :4
+bind 5 select-window -t :5
+bind 6 select-window -t :6
 
 #}}}
 #pane #{{{
@@ -91,12 +92,12 @@ bind C-m command-prompt -p "from:,to:" "swap-pane -s %% -t %%"
 # bind C-v select-layout main-vertical
 bind C-t select-layout tiled
 
-bind 1 select-pane -t .1
-bind 2 select-pane -t .2
-bind 3 select-pane -t .3
-bind 4 select-pane -t .4
-bind 5 select-pane -t .5
-bind 6 select-pane -t .6
+bind ! select-window -t .1
+bind @ select-window -t .2
+bind '#' select-window -t .3
+bind '$' select-window -t .4
+bind '%' select-window -t .5
+
 #}}}
 #buffers #{{{
 bind y capture-pane
