--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,4 @@
+
 set -g prefix C-s #{{{
 
 set default-terminal screen
@@ -44,6 +45,9 @@ bind d detach-client
 bind g command-prompt -p "rename session:" "rename-session %%"
 bind r source ~/.tmux.conf \; refresh-client
 bind t clock-mode
+
+bind -t vi-edit C-n history-down
+bind -t vi-edit C-p history-up
 # }}}
 #window #{{{
 bind w choose-window
@@ -131,3 +135,4 @@ if-shell "[ `tmux -V |cut -d' ' -f2|cut -d'.' -f1` -lt '2' ]" "set -g mouse-resi
 if-shell "[ `tmux -V |cut -d' ' -f2|cut -d'.' -f1` -lt '2' ]" "set -g mouse-select-pane on"
 if-shell "[ `tmux -V |cut -d' ' -f2|cut -d'.' -f1` -lt '2' ]" "set -g mouse-select-window on"
 # }}}
+
